--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://vinodreddy52.github.io/VinodDigitalSpace/about",
+  "homepage": "https://vinodreddy52.github.io/VinodDigitalSpace/",
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
