--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@mui/lab": "^6.0.0-beta.30",
     "@mui/material": "^6.4.7",
     "@mui/styled-engine-sc": "^6.4.6",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "cra-template-pwa": "2.0.0",
+    "pdfjs-dist": "^4.8.69",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-pdf": "^9.2.1",
     "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.15",
